# serial

./: CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-unix.yml  ci-windows.yml  main.yml
include/serial/: serial.h
include/serial/impl/: impl.h
src/: serial.cc  serial.cpp
src/impl/: impl_unix.cc  impl_unix.cpp  impl_win.cc  impl_win.cpp
src/impl/list_ports/: list_ports_linux.cc  list_ports_linux.cpp  list_ports_macos.cc  list_ports_macos.cpp  list_ports_osx.cc  list_ports_win.cc  list_ports_win.cpp
tests/: list_ports_tests.cpp  unix_list_ports_tests.cc  unix_list_ports_tests.cpp  unix_serial_tests.cc  unix_serial_tests.cpp  unix_timer_tests.cc  unix_timer_tests.cpp
tests/unit/: unix_timer_tests.cc
